@@ -143,6 +143,73 @@ class RstToPdf(object):
             log.info('hyphenation by default in %s , loaded %s',
                 self.styles['bodytext'].language, ','.join(self.styles.languages))
 
+    def size_for_image_node(self,node):
+        imgname = str(node.get("uri"))
+        scale =float(node.get('scale',100))/100
+
+        # Figuring out the size to display of an image is ... annoying.
+        # If the user provides a size with a unit, it's simple, adjustUnits
+        # will return it in points and we're done.
+
+        # However, often the unit wil be "%" (specially if it's meant for
+        # HTML originally.In which case, we will use a percentage of self.styles.tw
+        # which may or may not be correct.
+
+        # Find the image size in pixels:
+
+        try:
+            xdpi,ydpi=self.styles.def_dpi,self.styles.def_dpi
+            if imgname.split('.')[-1].lower() in [
+                    "ai","ccx","cdr","cgm","cmx","sk1","sk","svg","xml","wmf","fig"]:
+                iw, ih = SVGImage(imgname).wrap(0, 0)
+            else:
+                img = PILImage.open(imgname)
+                iw, ih = img.size
+                xdpi,ydpi=img.info.get('dpi',(300,300))
+                
+            # Try to get the print resolution from the image itself via PIL.
+            # If it fails, assume a DPI of 300, which is pretty much made up,
+            # and then a 100% size would be iw*inch/300, so we pass
+            # that as the second parameter to adjustUnits
+            #
+            # Some say the default DPI should be 72. That would mean 
+            # the largest printable image in A4 paper would be something 
+            # like 480x640. That would be awful.
+            #
+
+            w = node.get('width')
+            if w is not None:
+                # In this particular case, we want the default unit to be pixels
+                # so we work like rst2html
+                w = self.styles.adjustUnits(w, self.styles.tw,default_unit='px')
+            else:
+                log.warning("Using image %s without specifying size."
+                    "Calculating based on %ddpi", imgname,xdpi)
+                # No width specified at all, use w in px
+                w = iw*inch/xdpi
+
+            h = node.get('height')
+            if h is not None:
+                h = self.styles.adjustUnits(h, ih*inch/ydpi)
+            else:
+                # Now, often, only the width is specified!
+                # if we don't have a height, we need to keep the
+                # aspect ratio, or else it will look ugly
+                h = w*ih/iw
+
+            # Apply scale factor
+            w=w*scale
+            h=h*scale
+
+            # And now we have this probably completely bogus size!
+            log.info("Image %s size calculated:  %fcm by %fcm",
+                imgname, w/cm, h/cm)
+        except IOError, e: #No image, or no permissions
+            log.error('Error opening "%s": %s' % (imgname, str(e)))
+            node.elements = []
+        return w,h
+
+
     def style_language(self, style):
         """Return language corresponding to this style."""
         try:
@@ -317,7 +384,8 @@ class RstToPdf(object):
             node.pdftext = pre + node.pdftext + post
 
         elif isinstance(node, docutils.nodes.image):
-            node.pdftext = '<img src="%s" />' % node.get('uri')
+            w,h=self.size_for_image_node(node)
+            node.pdftext = '<img src="%s" width="%f" height="%f"/>' % (node.get('uri'),w,h)
 
         elif isinstance(node, math_node):
             # FIXME: implement this using inline images
@@ -828,82 +896,20 @@ class RstToPdf(object):
             node.elements = [BoxedContainer(rows, self.styles[node.tagname])]
 
         elif isinstance(node, docutils.nodes.image):
-            # FIXME: handle all the other attributes
-
+            # FIXME: handle class,target,alt, check align
+            w,h=self.size_for_image_node(node)
             imgname = str(node.get("uri"))
-            scale =float(node.get('scale',100))/100
-
-            # Figuring out the size to display of an image is ... annoying.
-            # If the user provides a size with a unit, it's simple, adjustUnits
-            # will return it in points and we're done.
-
-            # However, often the unit wil be "%" (specially if it's meant for
-            # HTML originally.In which case, we will use a percentage of self.styles.tw
-            # which may or may not be correct.
-
-            # Find the image size in pixels:
-
-            try:
-                xdpi,ydpi=self.styles.def_dpi,self.styles.def_dpi
-                if imgname.split('.')[-1].lower() in [
-                        "ai","ccx","cdr","cgm","cmx","sk1","sk","svg","xml","wmf","fig"]:
-                    iw, ih = SVGImage(imgname).wrap(0, 0)
-                else:
-                    img = PILImage.open(imgname)
-                    iw, ih = img.size
-                    xdpi,ydpi=img.info.get('dpi',(300,300))
-                    
-                # Try to get the print resolution from the image itself via PIL.
-                # If it fails, assume a DPI of 300, which is pretty much made up,
-                # and then a 100% size would be iw*inch/300, so we pass
-                # that as the second parameter to adjustUnits
-                #
-                # Some say the default DPI should be 72. That would mean 
-                # the largest printable image in A4 paper would be something 
-                # like 480x640. That would be awful.
-                #
-
-                w = node.get('width')
-                if w is not None:
-                    # In this particular case, we want the default unit to be pixels
-                    # so we work like rst2html
-                    w = self.styles.adjustUnits(w, self.styles.tw,default_unit='px')
-                else:
-                    log.warning("Using image %s without specifying size."
-                        "Calculating based on %ddpi", imgname,xdpi)
-                    # No width specified at all, use w in px
-                    w = iw*inch/xdpi
-
-                h = node.get('height')
-                if h is not None:
-                    h = self.styles.adjustUnits(h, ih*inch/ydpi)
-                else:
-                    # Now, often, only the width is specified!
-                    # if we don't have a height, we need to keep the
-                    # aspect ratio, or else it will look ugly
-                    h = w*ih/iw
-
-                # Apply scale factor
-                w=w*scale
-                h=h*scale
-
-                # And now we have this probably completely bogus size!
-                log.info("Image %s size calculated:  %fcm by %fcm",
-                    imgname, w/cm, h/cm)
-                if imgname.split('.')[-1].lower() in (
-                        'ai', 'ccx', 'cdr', 'cgm', 'cmx', 'fig',
-                        'sk1', 'sk', 'svg', 'xml', 'wmf'):
-                    node.elements = [SVGImage(filename=imgname, height=h, width=w)]
-                else:
-                    node.elements = [Image(filename=imgname, height=h, width=w)]
-                i = node.elements[0]
-                if node.get('align'):
-                    i.hAlign = node.get('align').upper()
-                else:
-                    i.hAlign = 'CENTER'
-            except IOError, e: #No image, or no permissions
-                log.error('Error opening "%s": %s' % (imgname, str(e)))
-                node.elements = []
+            if imgname.split('.')[-1].lower() in (
+                    'ai', 'ccx', 'cdr', 'cgm', 'cmx', 'fig',
+                    'sk1', 'sk', 'svg', 'xml', 'wmf'):
+                node.elements = [SVGImage(filename=imgname, height=h, width=w)]
+            else:
+                node.elements = [Image(filename=imgname, height=h, width=w)]
+            i = node.elements[0]
+            if node.get('align'):
+                i.hAlign = node.get('align').upper()
+            else:
+                i.hAlign = 'CENTER'
 
         elif isinstance(node, docutils.nodes.figure):
             # The sub-elements are the figure and the caption, and't ugly if they separate
@@ -1480,6 +1486,8 @@ def main():
                 source_path=infile.name,
                 output=outfile,
                 compressed=options.compressed)
+
+
 
 
 if __name__ == "__main__":
