@@ -1,6 +1,7 @@
 New in SVN (will be 0.11)
 -------------------------
 
+* Issue 118: Support for :scale: in images and handle resizing of inline images
 * Issue 119: Fix placement of headers and footers
 * New background property for page templates (nice for presentations, for example)
 * Default to px for image width specifications instead of pt
